--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "homepage": "http://RitishKhanna.github.io/iPod-Classic",
+  "homepage": "http://RitishKhanna.github.io/",
   "name": "ipod-classic",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "zingtouch": "^1.0.6"
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "zingtouch": "^1.0.6",
+    "framer-motion": "^10.16.16",
+    "react-icons": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
